tooling/nargo_cli/tests/snapshots/compile_failure/foreign_function_declaration/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Type provided when a numeric generic was expected
  ┌─ src/main.nr:6:32
  │
6 │ fn my_pedersen_hash<N>(_input: [Field; N]) -> Field {}
  │                                ---------- the numeric generic is not of type `u32`
  │

error: Definition of low-level function outside of standard library
  ┌─ src/main.nr:5:1
  │
5 │ #[foreign(pedersen_hash)]
  │ ------------------------- Usage of the `#[foreign]` or `#[builtin]` function attributes are not allowed outside of the Noir standard library
  │

Aborting due to 2 previous errors
